[package]
name = "rs-raytrace"
version = "0.1.0"
authors = ["Austin Martin <auz.martin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.2.0"
cgmath = "0.17.0"
failure = "0.1.6"
futures = "0.3.4"
image = "0.22"
rand = "0.7.3"
shaderc = "0.6"
tobj = "0.1.12"
wgpu = "0.5.0"
winit = "0.20"
